# BuerProject

./: CMakeLists.txt  buer_log-2025-07-14-15-09-57  buer_swing  lecture_4.cnoid  package.xml  simple_tank.body
cnoid_proj/: buer_shorttrack.cnoid  buer_swing  go2_shorttrack.cnoid
controllers/: BuerController.cpp  BuerInferenceController.cpp  CMakeLists.txt
models/: buer.body  buer.cnoid  buer.urdf  buer.xacro  buer_test.urdf
models/stl/: calf.stl  foot.stl  lap.stl
rl/: buer_debug_physics.py  buer_debug_torque.py  buer_env.py  buer_env_rolling.py  buer_eval.py  buer_eval_rolling.py  buer_train.py  buer_train_rolling.py
scripts/: dump_cfgs_to_yaml.py  dump_training_data.py
