<?xml version="1.0"?>
<package format="2">
  <name>buer</name>
  <version>1.0.0</version>
  <description>
    The buer package, including a Choreonoid controller for reinforcement learning model inference.
  </description>

  <maintainer email="sroite@example.com">sroite</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>choreonoid</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>